src/objects/cb5__CBLog__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Warnings</relationshipLabel>
        <relationshipName>CBLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Action__c</fullName>
        <label>Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__LogNumber__c</fullName>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>LogNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>cb5__CBLog__c</referenceTo>
        <relationshipLabel>Chilld Logs</relationshipLabel>
        <relationshipName>CBChilldLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Source__c</fullName>
        <label>Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CB Log</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Action__c</columns>
        <columns>cb5__Description__c</columns>
        <columns>cb5__Index__c</columns>
        <columns>cb5__JobId__c</columns>
        <columns>cb5__LogNumber__c</columns>
        <columns>cb5__Parent__c</columns>
        <columns>cb5__Source__c</columns>
        <columns>cb5__Status__c</columns>
        <columns>cb5__Title__c</columns>
        <columns>cb5__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>